Fix close button. It was overlapping feedback

--- a/frontend/scripts/react-components/shared/methods-disclaimer-banner/methods-disclaimer-banner.scss
+++ b/frontend/scripts/react-components/shared/methods-disclaimer-banner/methods-disclaimer-banner.scss
@@ -27,14 +27,9 @@
 
   .close-button {
     position: absolute;
-    right: 30px;
-    top: 40%;
+    right: 242px;
+    top: 31%;
     border: none;
-  }
-
-  .icon-close {
-    width: 20px;
-    height: 20px;
   }
 
   .link {
